--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,7 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule . /index.php [L]
+    php_value max_file_uploads=200;
 </IfModule>
 
 # php -- BEGIN cPanel-generated handler, do not edit
